testsuite/tests/typecheck/should_fail/T7410.hs
module T7410 where

foo :: (Either Int, Int)
foo = foo
