testsuite/tests/typecheck/should_fail/T7410.stderr

T7410.hs:3:9: error: [GHC-83865]
    • Expecting one more argument to ‘Either Int’
      Expected a type, but ‘Either Int’ has kind ‘* -> *’
    • In the type signature: foo :: (Either Int, Int)
